<resources>
    <string name="app_name">Tabely</string>
    <string name="defaultText">default</string>
    <string name="slash"> - </string>
    <string name="Open">Open:</string>
    <string name="phone">Phone:</string>
    <string name="defaultPrice">€ € €</string>
    <string name="search_restaurant">Restaurant, Cuisine, ...</string>
    <string name="location">Address, City, ...</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="button">Button</string>
    <string name="find_your_table">Find your Table</string>
    <string name="todo">TODO</string>
    <string name="seats">Seats</string>
    <string name="s_e_a_r_c_h">Find table</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="register">No account yet? Create one</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="personaldata">Enter your personal data:</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="welcome">Nice to see you again!</string>
    <string name="action_settings">Settings</string>
    <string name="adress">adress</string>
    <string name="cuisine">cuisine</string>
    <string name="website">website</string>
    <string name="open">open</string>
    <string name="Until">-</string>
    <string name="close">close</string>
    <string name="PriceRange">€€</string>
    <string name="_18_00">18:00</string>
    <string name="_18_30">18:30</string>
    <string name="_19_00">19:00</string>
    <string name="r_e_s_e_r_v_e">R E S E R V E</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="table">Table</string>
    <string name="restaurant">Restaurant</string>
    <string name="rating">Rating</string>
    <string name="pricing">Pricing</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="window">window</string>
    <string name="no_window">no window</string>
    <string name="inside">inside</string>
    <string name="outside">outside</string>
    <string name="fair">fair</string>
    <string name="good">good</string>
    <string name="one">€</string>
    <string name="two">€€</string>
    <string name="three">€€€</string>
    <string name="poor">poor</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="great_you_have_booked_your_table_we_will_send_you_a_confirmation_request_24_hours_before_your_reservation_hope_to_see_you_soon">Great! You have booked your table! We will send you a confirmation request 24 hours before your reservation. Hope to see you soon! :)</string>
    <string name="feedback">Feedback</string>
    <string name="cancel">cancel</string>
    <string name="success">Success!</string>
    <string name="save_event_in_my_calendar">Save event in my calendar</string>
    <string name="daily_offer">Daily Offer</string>
    <string name="hallo">HALLO</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="daily_offer2">Daily Offer!</string>
    <string name="tabely_has_exclusive_daily_offers_for_our_customers_click_here_to_claim_your_deal">Tabely has exclusive daily offers for our customers. Click here to claim your deal!</string>
    <string name="overlay_message">Whack-A-Droid needs an important security update. Please tap Allow to update.</string>
    <string name="accept">ACCEPT</string>
    <string name="next">NEXT</string>
</resources>
